fixed overflow

--- a/krp-v1/src/components/Shopping/media__queries.scss
+++ b/krp-v1/src/components/Shopping/media__queries.scss
@@ -7,7 +7,7 @@
     .store{
       &-heading {
         &-left {
-          width: 100vw;
+          width: 100%;
         }
         &-right {
           display: none;
@@ -15,7 +15,7 @@
       }
 
       &-info-text{
-          width: 80vw;
+          width: 100%;
       }
     }
     .item {
