--- a/krp-v1/src/components/Shopping/shopping.scss
+++ b/krp-v1/src/components/Shopping/shopping.scss
@@ -1,7 +1,7 @@
 @import "../../config.scss";
 
 .shopping-section {
-  width: 100%;
+  width: 100vw;
   margin: 3rem auto;
   position: relative;
 
@@ -32,7 +32,7 @@
     &-info {
       position: relative;
       margin-top: 5vh;
-      left: 15vw;
+      margin-left: 15vw;
 
       &-text {
         margin-top: 1vh;
